# django-meta-whatsapp

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  run_demo.py  runtests.py  setup.py  tailwind.config.js
.github/workflows/: deploy-pages.yml  publish.yml
demo/: manage.py
demo/demo/: settings.py  urls.py  wsgi.py
django_meta_whatsapp/: __init__.py  admin.py  apps.py  flows.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
django_meta_whatsapp/management/commands/: wa_sync_templates.py
django_meta_whatsapp/migrations/: 0001_initial.py  0002_whatsappflow_whatsappflowresponse.py
django_meta_whatsapp/static/django_meta_whatsapp/css/: tailwind.css
django_meta_whatsapp/static/django_meta_whatsapp/docs/: index.html
django_meta_whatsapp/templates/django_meta_whatsapp/: account_confirm_delete.html  account_form.html  account_list.html  analytics.html  apikey_confirm_delete.html  apikey_form.html  apikey_list.html  base.html  blocked_sync.html  blocked_user_list.html  campaign_confirm_delete.html  campaign_detail.html  campaign_form.html  campaign_list.html  catalog_confirm_delete.html  catalog_form.html  catalog_list.html  catalog_sync.html  chat_room.html  contact_confirm_delete.html  contact_form.html  contact_import.html  contact_list.html  dashboard.html  flow_detail.html  flow_form.html  flow_list.html  flow_response_list.html  inbox.html  label_confirm_delete.html  label_form.html  label_list.html  signup_form.html  signup_list.html  template_confirm_delete.html  template_form.html  template_list.html  webhook_logs.html
django_meta_whatsapp/templates/django_meta_whatsapp/tags/: account_selector.html
django_meta_whatsapp/templatetags/: wa_form_tags.py  wa_tags.py
docs/: index.html  llms.txt  robots.txt  sitemap.xml
tests/: __init__.py  test_models.py  test_utils.py  test_views.py  urls.py
