[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-meta-whatsapp"
version = "1.0.9"
description = "Production-ready Django WhatsApp Cloud Platform — Inbox, Campaigns, Templates, Analytics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Rahul Baberwal", email = "im@rahulbaberwal.com"}
]
dependencies = [
    "Django>=4.0",
    "requests>=2.28",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://rahulbaberwal.com"
Repository = "https://github.com/rahul-baberwal/django-meta-whatsapp/"

[project.optional-dependencies]
celery = ["celery>=5.0", "django-celery-beat>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["django_meta_whatsapp"]
